Revision history for Dependencies-Searcher

0.05_09 2013-10-
 [FIX]
 - A pod error
 [EHANCEMENTS]
 - More tests

0.05_08 2013-10-20 21:58
 [EHANCEMENTS]
 - Format and clean code
 - Write AckRequester Documentation
 - Complete and correct Dependencies::Searcher documentation

0.05_07 2013-10-04 21:23
 [FIX]
 - Close bug #25 about modules in corelist with a fresher version 
 - New regex for cleaning, now everything is clean
 - Module '1' were appearing when merging 2 use and require arrays
 - Force the use of IPC::Run and add it (and IPC::Cmd) to Makefile.PL requirements
 [EHANCEMENTS]
 - Better logs 
 - Make log file directory cross-platform (thanx mishin)

0.05_06 2013-09-24 08:57
 [FIX]
 - Translate some french doc and remove some non UTF-8 stuff

0.05_05 2013-09-23 20:45
 [EHANCEMENTS]
 - Log to a /tmp file
 - Removes version numbers
 [FIX]
 - Stupid typo in Makefile.PL prerequisites

0.05_04 2013-09-22 20:02
 [EHANCEMENTS]
 - Upgrade documentation
 - Logs system with File::Stamped & Log::Minimal
 - Use Module::Version's Perl API, not command line (avoid problems reported by Smoke testers)
 - Now implement the Module::CoreList 2.99 instead of 2.4902  to use it's is_core() method (avoids to use another IPC::Cmd)  

0.05_03 2013-09-17 07:51
 [FIXES]
 - A pod error
 - Add App::Ack and Module::Version to TEST_REQUIRES in Makefile.PL

0.05_02 2013-09-16 22:11
 [FIXES]
 - get_modules() method rewriting, using IPC::Cmd, not exec() or system()
 - Fix crash when not finding any use or require
 - Make the module more portable by using Cwd to get some dynamic path and avoid relative path problems
 [EHANCEMENTS]
 - Make Dependencies::Searcher using Dependencies::Searcher::AckRequester
 - Build an independant module for the Ack part, that returns an array containing interesting lines
 - Add a MIN_PERL_VERSION (5.010) in Makefile.PL as recommanded at CPANTS

0.05_01 2013-09-10 23:10
 [EHANCEMENTS]
 - Test Ack availability in tests