@@ -7,6 +7,7 @@ README.md
 t/00-load.t
 t/02-impl-ack-requester.t
 t/03-regex-cleaner.t
+t/04-regex-pattern.t
 t/09-cpanfile.t
 t/10-full-impl.t
 t/manifest.t
