@@ -23,9 +23,10 @@ WriteMakefile(
 	'Test::Pod::Coverage' => 1.08,
 	'Test::Pod'           => 1.48,
     },
+    # For any module added, please add it to t/09-cpanfile.t too or
+    # tests will fail :D
     PREREQ_PM => {
 	'App::Ack'              => 2.10,
-	'Cwd'                   => 3.40,
 	'Data::Printer'         => 0.35,
 	'File::HomeDir'         => 1.00,
 	'File::Spec::Functions' => 3.40,
@@ -36,6 +37,7 @@ WriteMakefile(
 	'Module::CoreList'      => 2.99,
 	'Module::Version'       => 0.12,
 	'Moose'                 => 2.0602,
+	'Path::Class'           => 0.32,
 	'Test::More'            => 0,
 	'Version::Compare'      => 0.14,
     },
