@@ -9,11 +9,9 @@ my @dirty_modules = (
     "use Module::Version 'get_version';",
     "use Moose;",
     "use IPC::Cmd qw[can_run run];",
-    "use Cwd;",
     "use Log::Minimal env_debug => 'LM_DEBUG';",
     "use File::Stamped;",
     "use IO::File;",
-    "use File::Temp;",
     "use File::HomeDir;",
     "use File::Spec::Functions qw(catdir catfile);",
     "use Version::Compare;",
